--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   flutter_native_splash: ^2.2.4
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
