--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_native_splash: ^2.2.4
   provider: ^6.0.3
   shared_preferences: ^2.0.15
+  firebase_core: ^1.6.0
+  firebase_messaging: ^10.0.7
 
 dev_dependencies:
   flutter_test:
