--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shared_preferences: ^2.0.15
   firebase_core: ^1.6.0
   firebase_messaging: ^10.0.7
+  syncfusion_flutter_charts: ^20.2.40
 
 dev_dependencies:
   flutter_test:
